syntax = "proto3";

option csharp_namespace = "QuickChat.Gateway.Services";

import "google/protobuf/timestamp.proto";

package ChatApi;

service Chat {
    rpc GetUserChats(GetUserChatsRequest) returns (GetUserChatsReply) {}
    rpc GetChatByCode(GetChatByCodeRequest) returns (GetChatByCodeReply) {}
    rpc JoinChat(JoinChatRequest) returns (JoinChatReply) {}
    rpc CreateChat(CreateChatRequest) returns (CreateChatReply) {}
}

message GetUserChatsRequest {
    string user_id = 1;
}

message GetUserChatsReply {
    repeated ChatMessage chats = 1;
}

message GetChatByCodeRequest {
    string code = 1;
}

message GetChatByCodeReply {
    ChatMessage chat = 1;
}

message JoinChatRequest {
    string chat_id = 1;
    string user_id = 2;
    string name = 3;
}

message JoinChatReply {
    ChatParticipantMessage participant = 1;
}

message CreateChatRequest {
    string name = 1;
}

message CreateChatReply {
    ChatMessage chat = 1;
}

message ChatMessage {
    string id = 1;
    string code = 2;
    string name = 3;
    repeated ChatParticipantMessage participants = 4;
    google.protobuf.Timestamp created_at = 5;
    int64 life_time_seconds = 6;
}

message ChatParticipantMessage {
    string id = 1;
    string user_id = 2;
    string name = 3;
    google.protobuf.Timestamp joined_at = 4;
}
